www/asa.css
/* ... */
#asa_controlbar .irs-from, #asa_controlbar .irs-to, #asa_controlbar .irs-single {
    background: transparent;
    color: #27aae1;
    font-weight: bold;
    font-size: 13px;
    padding: 1px 2px;
}

div.datatable_wrapper, div.datatable_wrapper table {
    width: 100% !important;
    overflow: scroll;
}

.dataTables_filter {
    position: relative;
    bottom: 46px;
    right: 0px;
    height: 0;
}

.dataTables_filter input {
    height: 38px;
}

div.dataTables_paginate {
    position: absolute;
    bottom: 15px;
    right: 20px;
}

.dataTables_wrapper .btn-group {
    margin-bottom: 0.5em;
}

.dataTables_wrapper .btn-group button {
    background-color: #f8f9fa;
    border-color: #ddd;
    color: #444;
}

.dataTables_wrapper .btn-group button:hover {
    background-color: #e9ecef;
    color: #2b2b2b;
}

.dataTables_paginate .page-link {
    color: #27aae1;
}

.dataTables_paginate .page-item.active .page-link {
    background-color: #27aae1;
    border-color: #27aae1;
}

.dataTables_wrapper .dataTables_info {
    padding-top: 1em !important;
}

table.dataTable thead .sorting:before, table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:before, table.dataTable thead .sorting_desc_disabled:after {
    bottom: 0.75em !important;
}

.btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
    box-shadow: none !important;
}

.btn {
    box-shadow: none !important;
}

.tables_helper_tooltip {
  visibility: hidden;
  font-weight: normal;
  font-size: 13px;
  line-height: 1.15;
  width: 175px;
  background-color: #343a40;
  color: #fff;
  text-align: center;
  padding: 10px;
  border-radius: 6px;
  position: absolute;
  z-index: 1;
  top: 125%;
  left: 50%;
  margin-left: -80px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tables_helper_tooltip::after {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #343a40 transparent;
}

th:hover .tables_helper_tooltip {
    visibility: visible;
    opacity: 1;
}

.shiny-input-checkboxgroup label ~ .shiny-options-group, .shiny-input-radiogroup label ~ .shiny-options-group {
    margin-top: 0 !important;
}

.shiny-options-group .radio label {
    margin-bottom: 0 !important;
    font-weight: normal !important;
}

@media screen and (max-width: 767px) {
    .datatable_wrapper div.dt-buttons {
        visibility: hidden;
        height: 0;
        margin-bottom: 0 !important;
    }

    div.dataTables_wrapper div.dataTables_info {
        visibility: hidden;
        height: 0;
        padding-top: 0 !important;
    }

    div.dataTables_paginate {
        position: static;
    }

    div.dataTables_paginate .pagination {
        display: -webkit-inline-box;
    }

    .dataTables_filter {
        position: static;
        margin-top: -15px;
        margin-bottom: 10px;
        text-align: left;
    }

    .dataTables_filter label {
        width: 100%;
    }

    .dataTables_filter label input {
        width: 80% !important;
    }

    .header_background {
        padding: 10px 25px 0 25px;
    }
}


/************************/
/*******  PLAYERS  ******/
/************************/

.players_dropdown_wrapper {
    width: 40px;
    height: 40px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    background-color: white;
    border: 1pt #ededed solid;
    display: inline-block;
    margin-right: 10px;
}

.players_dropdown_img {
    display: inline;
    margin: 0 auto;
    margin-left: 15%;
    height: 105%;
    width: auto;
}

.players_dropdown_txt {
     position: relative;
     bottom: 14px;
     display: inline-block;
}

.profile_player_headshot {
    width: 190px;
    height: 190px;
    position: relative;
    display: inline-block;
    margin-right: 30px;
    float: left;
    bottom: 10px;
}

.profile_player_headshot img {
    display: inline;
    margin: 0 auto;
    margin-left: 10%;
    height: 105%;
    width: auto;
}

.header_background {
    background-image: url(asa_header_background.png);
    background-repeat: no-repeat;
    background-position: center top;
    background-attachment: fixed;
    margin: -20px;
    padding: 10px 35px 0 35px;
    overflow: hidden;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#tables_header h2 {
    color: white;
    font-weight: bold;
    font-size: 55px;
    margin: 35px 0;
}

.profile_player_demographics {
    float: left;
    padding-top: 50px;
    color: white;
}

#player_profile_basic_info .card-header {
     padding: 0;
}

.profile_player_demographics h3, .profile_player_demographics p {
     margin-bottom: 0;
}

.profile_player_demographics h3 {
    font-size: 2.75rem;
}

.profile_player_demographics p {
    font-size: 1.25rem;
    line-height: 1.65rem;
}

div.card-body {
    max-height: none !important;
}

h3.card_header {
    font-size: 24px;
    font-weight: bold;
    margin-top: -1rem;
    margin-bottom: 0.5rem;
}

.nav-pills {
    margin-bottom: 1rem;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    color: #fff;
    background-color: #27aae1;
}

.nav-pills .nav-link:not(.active):hover {
    color: #27aae1;
}
/* ... */

